# ESP32S2_DAP

./: CMakeLists.txt  Kconfig  README.md  partitions_example.csv  sdkconfig  sdkconfig.old  sdkconfigs
components/CMSIS-DAP/: CMakeLists.txt  component.mk
components/CMSIS-DAP/Include/: DAP.h  DAP_config.h  SWD_flash.h  SWD_opt.h  debug_cm.h  error.h
components/CMSIS-DAP/Source/: CMakeLists.txt  DAP.c  DAP_vendor.c  JTAG_DP.c  SWD_flash.c  SWD_host.c  SWD_opt.c  SW_DP.c  error.c
main/: CMakeLists.txt  Kconfig.projbuild  cdc_task.c  cdc_task.h  hid_task.c  hid_task.h  main.c  msc_task.c  msc_task.h  my_tcp.c  my_tcp.h  ring_buffer.c  ring_buffer.h  webusb_task.c  webusb_task.h
tinyusb/: CMakeLists.txt  Kconfig
tinyusb/additions/include/: tinyusb_types.h  tusb_config.h
tinyusb/additions/include_private/: descriptors_control.h
tinyusb/additions/src/: descriptors_control.c  usb_descriptors.c
tinyusb/tinyusb/src/: tusb_option.h
tinyusb/tinyusb/src/class/msc/: msc_device.c
